feat: Create project controller